<resources>
    <string name="app_name">James-Mark2</string>

    <string name="menu_home">Home</string>
    <string name="menu_explorar">Explorar</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_emalta">Em Alta</string>
    <string name="menu_perfil">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string-array name="array_top_trends_spinner">
        <item>Em Alta</item>
        <item>Copa 2022</item>
        <item>Esportes</item>
        <item>Gastronomia</item>
        <item>Infantil</item>
        <item>Réveillon 2023</item>
        <item>Shows</item>
        <item>Turismo</item>
    </string-array>


</resources>